--- a/index.html
+++ b/index.html
@@ -7,90 +7,85 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <main class="layout">
-    <section class="preview-card">
-      <h1>ColorPaint</h1>
-      <div class="room" data-room-preview>
-        <div class="wall" data-wall-preview aria-label="Стена"></div>
-        <div class="furniture" data-furniture-preview aria-label="Мебель"></div>
+  <main class="colorpaint-layout">
+    <section class="wall-section" aria-labelledby="wallTitle">
+      <h1 id="wallTitle">Стена и управление цветом</h1>
+      <div class="wall-preview" aria-label="Большой блок стены"></div>
+
+      <div class="wall-controls">
+        <h2>Split-секции</h2>
+        <div class="split-buttons" role="group" aria-label="Выбор split-секции">
+          <button type="button">Секция 1</button>
+          <button type="button">Секция 2</button>
+          <button type="button">Секция 3</button>
+          <button type="button">Секция 4</button>
+        </div>
+
+        <div class="color-input-group">
+          <input type="text" placeholder="Введите цвет" aria-label="Код цвета" />
+          <button type="button">Применить цвет</button>
+        </div>
       </div>
-      <p class="hint">Split-стена: до 4 секций в одном градиенте.</p>
     </section>
 
-    <section class="controls">
-      <div class="control-group">
-        <h2>Стена</h2>
-        <label>Секций стены (1–4)
-          <input id="sectionCount" data-section-count type="number" min="1" max="4" value="1" />
+    <section class="color-matching" aria-labelledby="matchingTitle">
+      <h2 id="matchingTitle">Подбор цветов</h2>
+      <div class="matching-actions">
+        <button type="button">Генерировать похожие</button>
+        <button type="button">Генерировать контрастные</button>
+      </div>
+
+      <div class="matching-results">
+        <div>
+          <h3>Похожие цвета</h3>
+          <div class="color-result-list" aria-label="Список похожих кликабельных цветов"></div>
+        </div>
+        <div>
+          <h3>Контрастные цвета</h3>
+          <div class="color-result-list" aria-label="Список контрастных кликабельных цветов"></div>
+        </div>
+      </div>
+    </section>
+
+    <section class="designer-templates" aria-labelledby="templatesTitle">
+      <h2 id="templatesTitle">Шаблоны дизайнеров</h2>
+      <details>
+        <summary>Показать популярные шаблоны</summary>
+        <p>Здесь отображаются самые популярные шаблоны.</p>
+        <button type="button" data-open-template-modal>Выбрать шаблон</button>
+      </details>
+
+      <dialog id="templateModal" aria-label="Выбор шаблона">
+        <p>Модальное окно выбора шаблона.</p>
+        <button type="button" data-close-template-modal>Закрыть</button>
+      </dialog>
+    </section>
+
+    <section class="furniture-section" aria-labelledby="furnitureTitle">
+      <h2 id="furnitureTitle">Мебель</h2>
+      <div class="furniture-placeholder">Placeholder мебели (будет добавлено позже).</div>
+    </section>
+
+    <section class="lighting-section" aria-labelledby="lightingTitle">
+      <h2 id="lightingTitle">Освещение</h2>
+      <div class="lighting-controls">
+        <button type="button">Теплое</button>
+        <button type="button">Холодное</button>
+        <label>
+          Регулировка света
+          <input type="range" min="0" max="100" value="50" />
         </label>
-        <div class="section-buttons">
-          <button type="button" data-section-index="0" class="is-active">Секция 1</button>
-          <button type="button" data-section-index="1">Секция 2</button>
-          <button type="button" data-section-index="2">Секция 3</button>
-          <button type="button" data-section-index="3">Секция 4</button>
-        </div>
-        <div class="inline-fields">
-          <input id="wallHex" data-wall-hex type="text" placeholder="#AABBCC" />
-          <input id="wallPicker" data-wall-picker type="color" value="#d9d9d9" />
-          <button id="applyWallColor" data-apply-wall-color type="button">Применить цвет</button>
-        </div>
       </div>
+    </section>
 
-      <div class="control-group">
-        <h2>Мебель</h2>
-        <div class="inline-fields">
-          <input id="furnitureHex" data-furniture-hex type="text" placeholder="#778899" />
-          <input id="furniturePicker" data-furniture-picker type="color" value="#8c8c8c" />
-          <button id="applyFurnitureColor" data-apply-furniture-color type="button">Применить цвет</button>
-        </div>
-      </div>
-
-      <div class="control-group">
-        <h2>Цвет из каталога</h2>
-        <div class="inline-fields wrap">
-          <select id="colorCatalog" data-color-catalog>
-            <option value="">Выберите базу</option>
-          </select>
-          <select id="catalogColor" data-catalog-color>
-            <option value="">Выберите цвет</option>
-          </select>
-          <select id="colorTarget" data-color-target>
-            <option value="wall">В стену</option>
-            <option value="furniture">В мебель</option>
-          </select>
-          <button id="applyCatalogColor" data-apply-catalog-color type="button">Применить цвет</button>
-        </div>
-      </div>
-
-      <div class="control-group">
-        <h2>Шаблоны дизайнеров (60/30/10)</h2>
-        <div class="inline-fields wrap">
-          <select id="templateSelect" data-template-select>
-            <option value="">Выберите шаблон</option>
-          </select>
-          <button id="applyTemplate" data-apply-template type="button">Применить шаблон</button>
-        </div>
-      </div>
-
-      <div class="control-group">
-        <h2>Похожие и контрастные</h2>
-        <button id="generateHarmony" data-generate-harmony type="button">Сгенерировать</button>
-        <div class="suggestions">
-          <div>
-            <h3>Similar</h3>
-            <ul id="similarColors" data-similar-list></ul>
-          </div>
-          <div>
-            <h3>Contrast</h3>
-            <ul id="contrastColors" data-contrast-list></ul>
-          </div>
-        </div>
-      </div>
+    <section class="disclaimers" aria-label="Дисклеймеры">
+      <p>Цвет на экране может отличаться.</p>
+      <p>Перемешивайте краску перед покраской.</p>
     </section>
   </main>
 
+  <script src="script.js"></script>
   <script src="colorDatabase.js"></script>
   <script src="designerTemplates.js"></script>
-  <script src="script.js"></script>
 </body>
 </html>
